# rag-test

./: .gitignore  README.md  candidate_data.json  main.py  pyproject.toml  requirements.txt  retrievers.py  test.http  vector_store.py
candidate-data/: alex_thompson.http  daniel_wilson.http  emma_collins.http  ethan_parker.http  maya_johnson.http  nathan_rodriguez.http  olivia_martinez.http  sophia_garcia.http
postgres/: docker-compose.yml
postgres/migrations/: 01_create_schema.sql  02_seed_candidate_data.sql
